# pre-commit-mail-selection

./: .git-emails.toml  Cargo.toml  README.md
src/: main.rs
