[package]
name = "pre-commit-mail-selection"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
dialoguer = {version = "0.11.0", features = [] }
git2 = { version = "0.20.1", features = ["vendored-libgit2", "vendored-openssl"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
